--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+:root {
+    --red: #FF5A70
+}
+
+.filter {
+    box-shadow: 0px 4px 15px rgb(0 0 0 / 10%);
+    border-radius: 5px;
+    background: #FFFFFF;
+    border: unset;
+    padding: 0.5rem 1rem;
+    width: max-content;
+}
